force-app/main/default/objects/NegotiatedProduct__c/NegotiatedProduct__c.object-meta.xml
<CustomObject>
    <description>Configured Components under Products assigned to an Account.</description>
    <label>Negotiated Product</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Negotiated Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>