force-app/main/default/objects/NegotiatedProduct__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Negotiated Products</relationshipLabel>
    <relationshipName>NegotiatedProducts</relationshipName>
    <type>Lookup</type>
</CustomField>