force-app/main/default/objects/NegotiatedProduct__c/fields/plan__c.field-meta.xml
<CustomField>
    <fullName>plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Negotiated Products</relationshipLabel>
    <relationshipName>NegotiatedProducts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>