force-app/main/default/objects/NegotiatedProduct__c/fields/product__c.field-meta.xml
<CustomField>
    <fullName>product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RT Product</label>
    <referenceTo>RT_Product__c</referenceTo>
    <relationshipLabel>Negotiated Products</relationshipLabel>
    <relationshipName>Negotiated_Products</relationshipName>
    <type>Lookup</type>
</CustomField>