force-app/main/default/objects/NegotiatedProduct__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>account__c</columns>
    <columns>plan__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>